# researchpilot

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.md  GOALS.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/researchpilot/: __init__.py
src/researchpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/researchpilot/analyzers/: literature.py
src/researchpilot/core/: models.py
tests/: __init__.py  conftest.py  test_citations.py  test_extractor.py  test_fair_check.py  test_literature.py  test_reproducibility.py  test_synthesizer.py
